[UPD] added icons and names to page - milestone 1 done

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <h1>FontIcons</h1>
+    </header>
+    <main>
+        <div id="filtered-icons"></div>
+    </main>
     <!-- js -->
     <script src="js/main.js"></script>
     <!-- /js -->
