[UPD] added select with different options

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <h1>FontIcons</h1>
     </header>
     <main>
+        <div id="container">
+            <h3>filter by type</h3>
+            <select name="icons-filter" id="filter">
+                <option value="all">All</option>
+                <option value="animals">Animals</option>
+                <option value="vegetables">Vegetables</option>
+                <option value="user">User</option>
+            </select>
+        </div>
         <div id="filtered-icons"></div>
     </main>
     <!-- js -->
