--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h3>filter by type</h3>
             <select name="icons-filter" id="filter">
                 <option value="all">All</option>
-                <option value="animals">Animals</option>
-                <option value="vegetables">Vegetables</option>
+                <option value="animal">Animals</option>
+                <option value="vegetable">Vegetables</option>
                 <option value="user">User</option>
             </select>
         </div>
