[UPD] added function to create select options dynamically, styled elements - BONUS DONE

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
         <h1>FontIcons</h1>
     </header>
     <main>
+        <!-- sezione filter by type -->
         <div id="container">
             <h3>filter by type</h3>
             <select name="icons-filter" id="filter">
                 <option value="all">All</option>
-                <option value="animal">Animal</option>
-                <option value="vegetable">Vegetable</option>
-                <option value="user">User</option>
             </select>
         </div>
+        <!-- sezione icone -->
         <div id="filtered-icons"></div>
     </main>
     <!-- js -->
