--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FontIcons</title>
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Rubik&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Rubik&display=swap"
+      rel="stylesheet"
+    />
     <!-- /fonts -->
     <!-- css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
     <!-- /css -->
     <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/7711c3f1fc.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7711c3f1fc.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- /FontAwesome -->
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>FontIcons</h1>
+      <h1>FontIcons</h1>
     </header>
     <main>
-        <!-- sezione filter by type -->
-        <div id="container">
-            <h3>filter by type</h3>
-            <select name="icons-filter" id="filter">
-                <option value="all">All</option>
-            </select>
-        </div>
-        <!-- sezione icone -->
-        <div id="filtered-icons"></div>
+      <!-- sezione filter by type -->
+      <div id="container">
+        <h3>filter by type</h3>
+        <select name="icons-filter" id="filter"></select>
+      </div>
+      <!-- sezione icone -->
+      <div id="filtered-icons"></div>
     </main>
     <!-- js -->
     <script src="js/main.js"></script>
     <!-- /js -->
-</body>
-
+  </body>
 </html>
